<resources>
    <string name="app_name">VehiculosApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="matricula">Matricula</string>
    <string name="insertar">Insertar</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VehiculosAPP</string>
    <string name="nav_header_subtitle">Manuel López Segovia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Insertar">Insertar</string>
    <string name="menu_lista">Vehiculos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
</resources>