<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarVehiculo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtiTextMarcaUD"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:layout_marginBottom="41dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/marca"
            app:layout_constraintBottom_toTopOf="@+id/edtiTextMatriculaUD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edtiTextMatriculaUD"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:layout_marginBottom="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/matricula"
            app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edtiTextModeloUD"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="99dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:layout_marginBottom="26dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/modelo"
            app:layout_constraintBottom_toTopOf="@+id/edtiTextMarcaUD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="266dp"
            android:layout_marginRight="266dp"
            android:layout_marginBottom="283dp"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtiTextModeloUD"
            app:layout_constraintVertical_bias="0.777" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="83dp"
            android:layout_marginLeft="83dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:layout_marginBottom="335dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnUpdate"
            app:layout_constraintTop_toBottomOf="@+id/edtiTextMatriculaUD" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>