<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarVehiculo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="54dp"
            android:layout_height="21dp"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="318dp"
            android:layout_marginRight="318dp"
            android:layout_marginBottom="19dp"
            android:text="@string/marca"
            app:layout_constraintBottom_toTopOf="@+id/edtiTextMarca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="54dp"
            android:layout_height="21dp"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="318dp"
            android:layout_marginRight="318dp"
            android:text="@string/modelo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="158dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="54dp"
            android:layout_height="21dp"
            android:text="@string/matricula"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="249dp" />

        <EditText
            android:id="@+id/edtiTextMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="79dp" />

        <EditText
            android:id="@+id/edtiTextMatricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="191dp" />

        <EditText
            android:id="@+id/edtiTextMarca3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="288dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertar"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="378dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>